2009-11-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Add cygwin detection methods.

2009-11-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: The include dir is named include, not install.

2009-11-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Add support for C[PLUS]_INCLUDE_PATH.

2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: If gzunzip didn't finish in time and we fail to
	kill the gzunzip process, it most likely finished just before we
	tried to kill it - assume everything is ok.

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: When done decompressing using GZipStream, delete
	the input file (as gunzip does). Also if we move the input file based
	on the extension, delete any previous file with the same target name.

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: Add a GZipStream decompress implementation.

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: Fix eol.

2009-10-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Add GIT support.

2009-09-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ProcessHelper.cs: When splitting stdout into lines don't split on
	neither tabs nor spaces.

2009-09-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Platform.cs: Added.
	* ProcessHelper.cs:
	* ProcessHelperLinux.cs:
	* ProcessHelperWindows.cs: Added support for specifying the platform
	and the child process algorithm (ps, pgrep) from the configuration.

	* MonkeyWrench.csproj: Updated.

	* Configuration.cs: Added Platform and ChildProcessAlgorithm.

2009-09-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ProcessHelperMac.cs:
	* ProcessHelperLinux.cs: Add a ps implementation to get all child
	processes, and use kill to kill processes on mac too.

2009-09-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ProcessHelper.cs:
	* ProcessHelperMac.cs:
	* ProcessHelperLinux.cs: